# Scalar-Hackathon

./: README.md  inference.py  main.py  openenv.yaml  pyproject.toml  requirements.txt
app/: __init__.py  environment.py  models.py  scenarios.py  tasks.py
server/: app.py
