[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "incident-response-env"
version = "1.0.0"
description = "A real-world on-call incident response OpenEnv environment"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "fastapi==0.111.0",
    "uvicorn[standard]==0.29.0",
    "pydantic==2.7.1",
    "openai>=2.7.2",
    "requests==2.32.2",
    "pyyaml==6.0.1",
    "openenv-core>=0.2.0",
]

[project.optional-dependencies]
dev = ["pytest", "httpx"]

[project.scripts]
serve = "server.app:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "server*"]
